Fix tag clipping - Update logo

--- a/styles.css
+++ b/styles.css
@@ -40,17 +40,13 @@ body {
     user-select: none;
     color: rgb(22, 22, 22);
     height: 100%;
+
+    /* background: radial-gradient(#fff3e9, white, white);
+    background-size: 10px 10px; */
 }
 
 .page-content {
     margin-bottom: 70px;
-}
-
-.top-toolbar {
-    background: #e7e7e7;
-    height: 50px;
-    margin-bottom: 10px;
-    border-radius: 10px;
 }
 
 .header-wrapper {
@@ -62,6 +58,9 @@ body {
     font-size: 0.8rem;
     border-bottom: 1px solid var(--seperatorClr);
     box-shadow: 0px 10px 14px -4px rgb(0 0 0 / 4%);
+
+    /* background: url(resources/img/header-back.png); */
+    background-size: 100vw;
 }
 
 .page-header {
@@ -77,8 +76,8 @@ body {
 
 .page-header .bars-icon {
     font-size: x-large;
-    /* position: absolute; */
-    /* right: 31px; */
+    position: absolute;
+    right: 10px;
     margin-right: 10px;
     /* background-color: red; */
     padding: 5px;
@@ -91,10 +90,19 @@ body {
     left: 31px;
 }
 
-.page-header .logo-top {
-    filter: contrast(0) brightness(10) invert(1);
-    width: 120px;
+.page-header .logo-top__ {
+    /* filter: contrast(0) brightness(10) invert(1); */
+    width: 110px;
     margin-right: auto;
+    margin-left: 5px;
+    z-index: 11;
+}
+
+.page-header .logo-top {
+    width: 50px;
+    margin-right: auto;
+    margin-left: 5px;
+    z-index: 100;
 }
 
 .top-divider-border {
@@ -318,7 +326,7 @@ body {
 
 .product-card {
     background-color: rgb(255, 255, 255);
-    height: 150px;
+    /* height: 150px; */
     /* min-height: 100px;
     max-height: 550px; */
     border-radius: 10px;
@@ -330,6 +338,8 @@ body {
     max-width: 600px;
     width: 100%;
     box-shadow: 0px 10px 14px -4px rgb(229 229 229);
+    min-height: 150px;
+    height: fit-content;
 }
 
 .product-card .product-image {
@@ -353,8 +363,8 @@ body {
     gap: 10px;
     position: relative;
     width: 55%;
-    max-height: 120px;
     width: 70%;
+    /* max-height: 120px; */
 }
 
 .product-card .product-title {
@@ -480,8 +490,9 @@ body {
 .product-additional .btn.action.add-single {
     /* background: linear-gradient(45deg, #b8b8b8, #e4e4e4); */
     --color: #f16100;
-    background: white;
-    border: 1px solid var(--color);
+    background-color: white;
+    /* background: rgb(255 102 0 / 15%); */
+    outline: 1px solid var(--color);
     color: var(--color);
     min-width: 70px;
 }
@@ -489,7 +500,7 @@ body {
     /* filter: grayscale() brightness(1.3) contrast(0.6);
     pointer-events: none; */
     background: rgb(219, 219, 219);
-    border: 1px solid rgb(196, 196, 196);
+    outline: 1px solid rgb(196, 196, 196);
     color: rgb(161, 161, 161);
 }
 
@@ -525,6 +536,15 @@ body {
     color: rgb(109, 109, 109);
     font-weight: bold;
     
+}
+
+.tag-important {
+    /* background: linear-gradient(45deg, #b8b8b8, #e4e4e4); */
+    --color: #f16100;
+    background-color: white;
+    background: rgb(255 102 0 / 15%);
+    /* outline: 1px solid var(--color); */
+    color: var(--color);
 }
 
 .tag- {
